doc-surrealist_versioned_docs/version-1.x/getting-started/settings-and-customisation.mdx
---
sidebar_position: 7
sidebar_label: Settings and customisation
title: Surrealist | Settings and customisation
description: Surrealist is a user interface for interacting with your SurrealDB database visually. It enables you to seamlessly connect to any SurrealDB instance, allowing you to execute queries, explore your tables, design your schemas, and much more.
---
import ThemedImage from '@theme/ThemedImage';
import useBaseUrl from '@docusaurus/useBaseUrl';

#  Settings and customisation

In the bottom left of the interface you can find a ⚙ button to open the settings dialog. These settings allow you to further customise the behaviour and appearance of Surrealist, such as switching between light and dark mode, increasing or decreasing the editor font sizes, and configure default values for new connections.

## Troubleshooting

If you experience issues or unintended behaviour when using Surrealist, please [open an issue](https://github.com/surrealdb/surrealist/issues/new/choose) on our GitHub repository. You can use the following methods when running into issues

### Resetting the config

Removing your configuration file may solve issues, however you will lose configured connections and other settings. It is recommended to backup the config file before deleting it.

The config file can be found at the following location

- **Linux:** `$HOME/.config/SurrealDB/Surrealist/config.json`
- **MacOS:** `$HOME/Library/Application Support/SurrealDB/Surrealist/config.json`
- **Windows:**  `{FOLDERID_RoamingAppData}\SurrealDB\Surrealist\config.json`

:::note
___NOTE:___ Avoid sharing your config or uploading it to public locations as it contains the authentication details to your configured connections.
:::

### Opening the developer console

The developer console may include hints to the cause of your problem. Include any errors you find inside with reported GitHub issues as it may significantly help the maintainers understand your problem.

You can open the developer tools using the following key combination

- **Windows / Linux:** `Ctrl + Shift + i`
- **MacOS:** `Command + Option + i`
