doc-surrealist_versioned_docs/version-2.x/getting-started/settings-and-customisation.mdx
---
sidebar_position: 7
sidebar_label: Settings and customisation
title: Surrealist | Settings and customisation
description: Surrealist is a user interface for interacting with your SurrealDB database visually. It enables you to seamlessly connect to any SurrealDB instance, allowing you to execute queries, explore your tables, design your schemas, and much more.
---

import ThemedImage from '@theme/ThemedImage';
import useBaseUrl from '@docusaurus/useBaseUrl';


#  Settings and customisation

In the bottom left of the interface you can find a ⚙ button to open the settings dialog. These settings allow you to further customise the behaviour and appearance of Surrealist, such as switching between light and dark mode, increasing or decreasing the editor font sizes, and configure default values for new connections.

## Troubleshooting

If you experience issues or unintended behaviour when using Surrealist, please [open an issue](https://github.com/surrealdb/surrealist/issues/new/choose) on our GitHub repository. You can use the following methods when running into issues

### Resetting the config

Removing your configuration file may solve issues, however you will lose configured connections and other settings. It is recommended to backup the config file before deleting it.

The config file can be found at the following location

- **Linux:** `$HOME/.config/SurrealDB/Surrealist/config.json`
- **MacOS:** `$HOME/Library/Application Support/SurrealDB/Surrealist/config.json`
- **Windows:**  `{FOLDERID_RoamingAppData}\SurrealDB\Surrealist\config.json`

:::note
___NOTE:___ Avoid sharing your config or uploading it to public locations as it contains the authentication details to your configured connections.
:::

### Opening the developer console

The developer console may include hints to the cause of your problem. Include any errors you find inside with reported GitHub issues as it may significantly help the maintainers understand your problem.

You can open the developer tools using the following key combination

- **Windows / Linux:** `Ctrl + Shift + i`
- **MacOS:** `Command + Option + i`


## Customising the interface

Surrealist offers a range of customisation options to tailor the interface to your liking. You can find these options in the settings dialog. 

## Behaviour

In this section you can configure the behaviour of the interface, such as toggling automatic connection on startup, auto complete suggetions and error validation in the editor. 

## Appearance

The appearance section allows you to scale the fonts in the editor and also select your default query output view and set the behaviour for your Query and designer views.


## Templates 

Templates allow you to set up different connection configurations that you can easily switch between. This is useful if you have multiple databases you frequently connect to, or if you have different configurations for different environments.

<ThemedImage
  alt="Surrealist banner"
  sources={{
    light: useBaseUrl('img/template-surrealist.png'),
    dark: useBaseUrl('img/template-surrealist.png'),
  }}
/>

### Creating a new template

To create a new template, click the `+` button in the templates section of the settings dialog. You can then configure the template with the following options:

- Connection: The connection details for the template


